Closed Bug 1766364 Opened 3 years ago Closed 3 years ago

Fix unreachable-code warnings

Categories

(Core :: General, defect)

defect

Tracking

()

RESOLVED FIXED
101 Branch
Tracking Status
firefox101 --- fixed

People

(Reporter: glandium, Assigned: glandium)

References

Details

Attachments

(1 file)

browser/components/shell/nsWindowsShellService.cpp(1055,11): error: code will never be executed [-Werror,-Wunreachable-code]
  VARIANT dir;
          ^~~
layout/base/nsLayoutUtils.cpp(9615,9): error: code will never be executed [-Werror,-Wunreachable-code]
        aDocument->ShouldAvoidNativeTheme();
        ^~~~~~~~~
layout/base/nsLayoutUtils.cpp(9613,9): note: silence by adding parentheses to mark code as explicitly dead
        true ||
        ^
        /* DISABLES CODE */ ( )
widget/windows/nsPrintSettingsWin.cpp(305,9): error: fallthrough annotation in unreachable code [-Werror,-Wunreachable-code-fallthrough]
        [[fallthrough]];
        ^
widget/windows/nsPrinterWin.cpp(165,9): error: fallthrough annotation in unreachable code [-Werror,-Wunreachable-code-fallthrough]
        [[fallthrough]];
        ^

browser/components/shell/nsWindowsShellService.cpp(1055,11): error: code will never be executed [-Werror,-Wunreachable-code]
VARIANT dir;
^~~
layout/base/nsLayoutUtils.cpp(9615,9): error: code will never be executed [-Werror,-Wunreachable-code]
aDocument->ShouldAvoidNativeTheme();
^~~~~~~~~
layout/base/nsLayoutUtils.cpp(9613,9): note: silence by adding parentheses to mark code as explicitly dead
true ||
^
/* DISABLES CODE */ ( )
widget/windows/nsPrintSettingsWin.cpp(305,9): error: fallthrough annotation in unreachable code [-Werror,-Wunreachable-code-fallthrough]
[[fallthrough]];
^
widget/windows/nsPrinterWin.cpp(165,9): error: fallthrough annotation in unreachable code [-Werror,-Wunreachable-code-fallthrough]
[[fallthrough]];
^

Attachment #9273762 - Attachment description: Bug 1766364 - Fix unreachable-code warnings. → Bug 1766364 - Fix unreachable-code warnings in Windows builds.
Pushed by mh@glandium.org: https://hg.mozilla.org/integration/autoland/rev/231cb00c7161 Fix unreachable-code warnings in Windows builds. r=mhowell,emilio,rkraesig
Status: NEW → RESOLVED
Closed: 3 years ago
Resolution: --- → FIXED
Target Milestone: --- → 101 Branch
Pushed by mkmelin@iki.fi: https://hg.mozilla.org/comm-central/rev/1421c33fe490 fix comm-central unreachable-code warnings in Windows builds. rs=bustage-fix
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: