Bug 1766364 - Fix unreachable-code warnings in Windows builds. r=mhowell,emilio,rkraesig

layout/base/nsLayoutUtils.cpp(9615,9): error: code will never be executed [-Werror,-Wunreachable-code]
        aDocument->ShouldAvoidNativeTheme();
        ^~~~~~~~~
layout/base/nsLayoutUtils.cpp(9613,9): note: silence by adding parentheses to mark code as explicitly dead
        true ||
        ^
        /* DISABLES CODE */ ( )
widget/windows/nsPrintSettingsWin.cpp(305,9): error: fallthrough annotation in unreachable code [-Werror,-Wunreachable-code-fallthrough]
        [[fallthrough]];
        ^
widget/windows/nsPrinterWin.cpp(165,9): error: fallthrough annotation in unreachable code [-Werror,-Wunreachable-code-fallthrough]
        [[fallthrough]];
        ^

Differential Revision: https://phabricator.services.mozilla.com/D144662